--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "deploy": "gh-pages -d dist",
+    "deploy-github": "gh-pages -d dist --repo git@github.com:father-lox/ikakprosto.git",
     "preview": "vite preview"
   },
   "dependencies": {
